--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,3 +10,12 @@ body {
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #f4f5f8;
 }
+
+.green-snackbar {
+    background: rgb(39, 170, 87);
+    color: white;
+}
+
+.mat-simple-snackbar-action {
+    color: white;
+}
