--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,7 +1,7 @@
 <mat-toolbar>
     <div fxFill fxLayout="row" fxLayoutAlign="space-between center">
         <span>{{ currentDate }}</span>
-        <span class = 'page-title'>Employee Manager</span>
-        <span>Current User Name</span>
+        <span class='page-title'>Employee Manager</span>
+        <span>Lenuta Ionut</span>
     </div>
 </mat-toolbar>
