Restructured the project, complete all tabs

--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -10,7 +10,7 @@ mat-card {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(255, 255, 255);
+    background-color: #edebf1f6;
     margin-top: 10px;
 }
 
