--- a/src/app/toolbar/toolbar.component.scss
+++ b/src/app/toolbar/toolbar.component.scss
@@ -1,7 +1,7 @@
 mat-toolbar {
     font-size: 14px;
     padding: 0 3%;
-    background-color: #ffffff;
+    background-color: #b8b7e9;
 }
 
 .page-title {
