--- a/src/app/shared-modules/common-table/common-table.component.html
+++ b/src/app/shared-modules/common-table/common-table.component.html
@@ -1,12 +1,17 @@
-<mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-  <ng-container *ngFor="let col of columns" [matColumnDef]="col.columnDef">
-    <mat-header-cell mat-header-cell *matHeaderCellDef>
-      {{col.header}}
-    </mat-header-cell>
-    <mat-cell *matCellDef="let element">
-      {{element[col.columnDef]}}
-    </mat-cell>
-  </ng-container>
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
-</mat-table>
+<div class="table-wrapper">
+  <mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+    <ng-container *ngFor="let col of columns" [matColumnDef]="col.columnDef">
+      <mat-header-cell mat-header-cell *matHeaderCellDef mat-sort-header>
+        {{col.header}}
+      </mat-header-cell>
+      <mat-cell *matCellDef="let element">
+        {{element[col.columnDef]}}
+      </mat-cell>
+    </ng-container>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
+</div>
+<div>
+  <mat-paginator [pageSize]="10" [pageSizeOptions]="[5, 10, 25]" aria-label="Select page of elements"></mat-paginator>
+</div>
