--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,8 @@ body {
     margin: 10px;
     font-family: Roboto, "Helvetica Neue", sans-serif;
     background-color: #f4f5f8;
+    height: calc(100vh - 10px);
+    overflow: auto;
 }
 
 .green-snackbar {
